# localization-server-anon

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake.yml  docker-image.yml
docker/: Dockerfile  build.sh  run.sh
scripts/: aby_float_benchmark_run.sh  clear_fixed_benchmark_plot.sh  emp_float_benchmark_dataobl_run.sh  emp_float_benchmark_plot.sh  emp_float_benchmark_run.sh  emp_float_benchmark_run_latency.sh  emp_vs_aby_plot.sh  insetplotter.py  loopleak_vs_dataobl_plot.sh  mult_add_fixed_float_time_plot.sh  netio_plot.sh  network_setup.sh  num_arith_ops_plot.sh  plotter.py
src/aby-float-server/: gaussnewtonlocalization.cpp  gaussnewtonlocalization.h  invert.cpp  invert.h  lmlocalization.cpp  lmlocalization.h  matmult.cpp  matmult.h  projectpoints.cpp  projectpoints.h  rodrigues.cpp  rodrigues.h  svd.cpp  svd.h  trigfuncs.cpp  trigfuncs.h  twonormsq.cpp  twonormsq.h  util.cpp  util.h
src/common/: fixed_point.h  jlog.h  printutil.h  privacyconf.h
src/emp-float-server/: fixed_point_emp.h  gaussnewtonlocalization.cpp  gaussnewtonlocalization.h  invert.cpp  invert.h  lmlocalization.cpp  lmlocalization.h  matmult.cpp  matmult.h  projectpoints.cpp  projectpoints.h  rodrigues.cpp  rodrigues.h  server-lm.cpp  svd.cpp  svd.h  trigfuncs.cpp  trigfuncs.h  twonormsq.cpp  twonormsq.h  util.cpp  util.h
test/aby-float/: CMakeLists.txt  benchmark.cpp  convergence.cpp  eth3d_bench.cpp  localize_wrapper.hpp  test.cpp
test/cleartext-fixed/: CMakeLists.txt  benchmark.cpp  float_vs_fixed_speed.cpp  test.cpp
test/common-test/: CMakeLists.txt  april_snail_features.hpp  eth3d_features.hpp  eth3d_tester.cpp  hoff_features.hpp  kitti_tester.cpp  test_harness.hpp  test_params.h
test/common-test/cleartext-ref/: gaussnewtonlocalization.hpp  invert.hpp  lmlocalization.hpp  svd.hpp
test/emp-fixed/: test.cpp
test/emp-float/: CMakeLists.txt  benchmark.cpp  client.cpp  convergence.cpp  eth3d_bench.cpp  localize_wrapper.hpp  test.cpp  test_utils.hpp
